...
            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:inputType="number|none"
                android:maxLength="6"
                android:id="@+id/priceFromEditText"
                android:digits="0123456789."
                android:hint="@string/from_string"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:inputType="number|none"
                android:maxLength="6"
                android:id="@+id/priceToEditText"
                android:digits="0123456789."
                android:hint="@string/to_string"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
...
        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_string"
            android:background="#FFFFFF"
            android:layout_above="@+id/confirm_button"
            android:layout_marginBottom="4dp"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
