<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileScreenFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/boy"
        android:id="@+id/profile_image"
        android:layout_gravity="center"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"
        android:paddingTop="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/favorites_string"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:id="@+id/favorites_button"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:id="@+id/history_button"
        android:layout_marginTop="10dp"/>
</LinearLayout>